# dioxus-ipc-bridge

./: Cargo.toml  README.md  publish.sh
src/: bridge.rs  lib.rs  parser.rs  platform.rs  plugin.rs  request.rs  response.rs  router.rs  streaming.rs
