[package]
name = "deckyfx-dioxus-ipc-bridge"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP-like IPC bridge for Dioxus desktop/web/mobile apps with bidirectional JS-Rust communication"
keywords = ["dioxus", "ipc", "bridge", "webview", "react"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
# Core Dioxus
dioxus = { workspace = true, features = ["document"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true, optional = true }

# Proc macros
# Use path for local development, version for published crate
deckyfx-dioxus-ipc-bridge-macros = { version = "0.1", path = "../dioxus-ipc-bridge-macros" }

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
chrono = { workspace = true }

# WASM-only dependencies (web/mobile)
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
gloo-timers = { workspace = true }

[features]
default = []
streaming = ["base64"]

[dev-dependencies]
dioxus = { workspace = true, features = ["desktop", "router"] }
tokio = { workspace = true, features = ["full"] }
