[package]
name = "deckyfx-dioxus-ipc-bridge"
version = "0.2.0"
edition = "2021"
authors = ["Decky Fx"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deckyfx/dioxus-ipc-bridge"
description = "HTTP-like IPC bridge for Dioxus desktop/web/mobile apps with bidirectional JS-Rust communication"
keywords = ["dioxus", "ipc", "bridge", "webview", "react"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
# Core Dioxus
dioxus = { version = "0.7.0", default-features = false, features = ["document"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
base64 = { version = "0.22", optional = true }

# Proc macros
# Use path for local development, version for published crate
deckyfx-dioxus-ipc-bridge-macros = { version = "0.2", path = "../dioxus-ipc-bridge-macros" }

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }
chrono = "0.4"

# WASM-only dependencies (web/mobile)
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = []
streaming = ["base64"]

[dev-dependencies]
dioxus = { version = "0.7.0", features = ["desktop", "router"] }
tokio = { version = "1", features = ["full"] }
